--- a/config/itemservice-dev.yml
+++ b/config/itemservice-dev.yml
@@ -1,10 +1,26 @@
 
+
+spring:
+  
+  rabbitmq:
+ 
+    host: 192.168.2.137
+    port: 5672
+    username: admin
+    password: admin
+
+
 spring:
   application:
     name: item-service
     
 #server:
 #  port: 8001   
+
+
+
+
+
 
 eureka:
   client:
