--- a/config/orderservice-dev.yml
+++ b/config/orderservice-dev.yml
@@ -41,6 +41,13 @@ server:
         
         
         
-        
+spring:
+  
+  rabbitmq:
+  
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
                   
       
